[package]
name = "active-storage"
version = "0.1.1"
edition = "2021"
description = "Active Storage facilitates uploading files to a cloud storage"
license = "Apache-2.0"
authors = ["Kaplan Elad <kaplan.elad@gmail.com>"]
documentation = "https://docs.rs/active-storage"
repository = "https://github.com/kaplanelad/active-storage"
keywords = []
readme = "README.md"

[features]
default = ["disk", "inmem"]
disk = ["dep:tokio", "tokio/fs"]
inmem = []
aws_s3 = [
    "dep:aws-sdk-s3",
    "dep:aws-types",
    "dep:aws-smithy-runtime-api",
    "dep:aws-smithy-types",
]
azure = [
    "dep:azure_storage_blobs",
    "dep:azure_storage",
    "dep:futures",
    "dep:azure_core",
]
gcp_storage = ["dep:google-cloud-storage"]

[[example]]
name = "aws_s3"
required-features = ["aws_s3"]

[[example]]
name = "azure"
required-features = ["azure"]

[dependencies]
async-trait = { version = "0.1.77" }
dyn-clone = { version = "1.0.16" }
thiserror = { version = "1.0.56" }

# Disk
tokio = { version = "1.35.1", default-features = false, features = [
    "fs",
], optional = true }

# AWS
aws-smithy-types = { version = "1.1.1", optional = true }
aws-smithy-runtime-api = { version = "1.1.1", optional = true }
aws-sdk-s3 = { version = "1.8.0", features = [
    "behavior-version-latest",
], optional = true }
aws-types = { version = "1.1.1", optional = true }

# GCP
google-cloud-storage = { version = "0.15.0", optional = true }

# Azure
azure_storage_blobs = { version = "0.19.0", optional = true }
azure_storage = { version = "0.19.0", optional = true }
futures = { version = "0.3", optional = true }
azure_core = { version = "0.19.0", optional = true }

[dev-dependencies]
tokio = { version = "1.35.1", features = ["rt-multi-thread", "rt", "macros"] }
insta = { version = "1.34.0", features = ["filters"] }
dockertest-server = { version = "0.1.7", features = ["cloud"] }
lazy_static = "1.4.0"
tree-fs = "0.1.0"
rstest = "0.18.2"
time = "0.3.33"
